--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-.cache
-dist
+# Node build artifacts
 node_modules
-webfonts
+npm-debug.log
+
+# Local development
+*.env
+*.dev
+.DS_Store
+
+# Docker
+Dockerfile
+docker-compose.yml
